fix the bug of observation

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -325,6 +325,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 1.10714872, 1.10714872],\n",
+       "       [0.        , 0.        , 0.78539816, 0.78539816]])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([[[0],[0],[4],[4]], [[0],[0],[4],[4]]])\n",
+    "y = np.array([[[1],[1],[2],[2]], [[0],[0],[4],[4]]])\n",
+    "np.arctan2(x[:,:,0], y[:,:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [2., 2., 2., 2., 2.],\n",
+       "       [3., 3., 3., 3., 3.],\n",
+       "       [4., 4., 4., 4., 4.]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.ones([4,5])\n",
+    "(x.T * np.array([1,2,3,4])).T"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
