Fix bugs in cooperation graph Change the action to 6 Fix the bugs in directional reward function

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -662,6 +662,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 1 + 2j\n",
+    "np.absolute(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
